<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MisVacasApp</string>
    <string name="contrasenaTexto">Contraseña</string>
    <string name="usuarioTexto">Usuario</string>
    <string name="usuario"></string>
    <string name="contrasena"></string>
    <string name="autologinTexto">Recordar</string>
    <string name="botonAceptar">Aceptar</string>
    <string name="botonMedicamentos">Medicamentos</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_recordar_usuario">Recordar usuario</string>
    <string name="buscar_vaca">Buscar Vaca</string>
    <string name="menu_administrar_cuenta">Administrar cuenta</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="modificar_usuario">Modificar usuario</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="repita_nueva_contrasena">Repita la nueva contraseña</string>
    <string name="nombre_usuario">Nombre</string>
    <string name="primer_apellido">Primer apellido</string>
    <string name="segundo_apellido">Segundo apellido</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="poblacion">Poblacion</string>
    <string name="fecha">Fecha:</string>
    <string name="tipo">Tipo:</string>
    <string name="descripcion">Descripción</string>
    <string name="barra">/</string>
    <string name="aniadir_vaca_id_vaca">Id Vaca</string>
    <string name="aniadir_vaca_rara">Raza</string>
    <string name="aniadir_vaca_fecha_nacimiento">Fecha nacimiento</string>
    <string name="aniadir_vaca_id_madre">Id madre</string>
    <string name="sexo">Sexo</string>
    <string name="menu_mis_vacas">Mis Vacas</string>
    <string name="reproduccion">Producción Leche y Carne</string>
    <string name="menu_seleccionar_todo">Seleccionar todo</string>
    <string name="menu_sincronizar_cuenta">Sincronizar cuenta</string>
    <string name="correo">Correo electronico</string>
    <string name="codigo_explotacion">Codigo Explotacion</string>

</resources>
