<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.misvacasapp.Login" >

  	<TextView
        android:id="@+id/usuarioTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usuario"
        android:layout_marginBottom="16dp"
        android:layout_alignParentLeft="true"
        android:text="@string/usuarioTexto"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/contrasenaTexto"
        android:layout_alignLeft="@+id/contrasena"
        android:layout_alignRight="@+id/contrasena"
        android:layout_marginBottom="18dp"
        android:ems="10"
         android:inputType="text"
        android:text="@string/usuario" >
    </EditText>  
    
    <TextView
        android:id="@+id/contrasenaTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/contrasena"
        android:layout_alignLeft="@+id/usuario"
        android:layout_marginBottom="16dp"
        android:text="@string/contrasenaTexto"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:id="@+id/contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBox"
        android:layout_alignLeft="@+id/usuarioTexto"
        android:layout_alignRight="@+id/botonAceptar"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/contrasena" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/botonAceptar"
        android:layout_alignRight="@+id/botonAceptar"
        android:layout_marginBottom="18dp"
        android:layout_marginRight="19dp"
        android:text="@string/autologinTexto" />
    
    <Button
        android:id="@+id/botonAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="17dp"
        android:onClick="onClick"
        android:text="@string/botonAceptar" />
  
</RelativeLayout>
