<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_usuario"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <EditText
                android:id="@+id/nombre_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="5dp"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primer_apellido"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/apellido1_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="5dp"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView3"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/segundo_apellido"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/apellido2_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="5dp"
                android:inputType="textPersonName" >
            </EditText>

            <TextView
                android:id="@+id/textView4"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/direccion_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="5dp"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView6"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poblacion"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/poblacion_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="5dp"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView5"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/telefono_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="5dp"
                android:inputType="phone" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/correo_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="5dp"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codigo_explotacion"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/codigo_explotacion_texto"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10" />
            
            <Button
                android:id="@+id/aniadir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:gravity="right"
                android:onClick="onClickActualizarUsuario"
                android:text="@string/botonAceptar" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>