<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/contrasena_actual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/aceptar"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/contrasena_actual"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/contrasena_actual_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/contrasena_actual"
        android:layout_alignRight="@+id/aceptar"
        android:layout_below="@+id/contrasena_actual"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text" >

    </EditText>

    <TextView
        android:id="@+id/nueva_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/contrasena_actual_texto"
        android:layout_alignRight="@+id/aceptar"
        android:layout_below="@+id/contrasena_actual_texto"
        android:layout_marginTop="30dp"
        android:text="@string/nueva_contrasena"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/nueva_contrasena_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nueva_contrasena"
        android:layout_alignRight="@+id/aceptar"
        android:layout_below="@+id/nueva_contrasena"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/repita_nueva_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nueva_contrasena_texto"
        android:layout_alignRight="@+id/aceptar"
        android:layout_below="@+id/nueva_contrasena_texto"
        android:layout_marginTop="30dp"
        android:text="@string/repita_nueva_contrasena"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/repita_nueva_contrasena_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/repita_nueva_contrasena"
        android:layout_alignRight="@+id/aceptar"
        android:layout_below="@+id/repita_nueva_contrasena"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text" >

    </EditText>

    <Button
        android:id="@+id/aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="23dp"
        android:layout_marginRight="15dp"
        android:onClick="onClickCambioContraseña"
        android:text="@string/botonAceptar" />

</RelativeLayout>
