<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/fecha"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="30dp"
        android:text="@string/descripcion"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="30dp"
        android:text="@string/tipo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/tipo_medicamento_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/boton_aceptar_nuevo_medicamento"
        android:layout_toRightOf="@+id/textView3"
        android:inputType="text"
        android:ems="10" />

    <EditText
        android:id="@+id/descripcion_medicamento_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/tipo_medicamento_texto"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/barra"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/fecha_medicamento_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toRightOf="@+id/textView1"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:inputType="number"
        android:ems="10" >
		  <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/boton_aceptar_nuevo_medicamento"
        android:layout_marginLeft="15dp"
        android:text="@string/barra"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/fecha_medicamento_mes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fecha_medicamento_dia"
        android:layout_alignBottom="@+id/fecha_medicamento_dia"
        android:layout_alignRight="@+id/textView5"
        android:layout_toRightOf="@+id/textView4"
        android:layout_marginRight="5dp"
        android:inputType="number"
        android:width="100dp" >

    </EditText>

    <EditText
        android:id="@+id/fecha_medicamento_anio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignRight="@+id/tipo_medicamento_texto"
        android:layout_toRightOf="@+id/textView5"
        android:inputType="number"
        android:ems="10" />

    <Button
        android:id="@+id/boton_aceptar_nuevo_medicamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="30dp"
        android:onClick="nuevoMedicamento"
        android:text="@string/botonAceptar" />

</RelativeLayout>
