<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/preidVaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/aniadir_vaca_id_vaca"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/abc_text_size_body_1_material" />

            <EditText
                android:id="@+id/id_vaca_nuevo_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:ems="10"
                android:hint="Ej: ES111111111111"
                android:inputType="textCapCharacters"
                android:nextFocusDown="@+id/raza_nuevo_texto"
                android:textSize="@dimen/abc_text_size_body_1_material" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:baselineAligned="true" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aniadir_vaca_rara"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/abc_text_size_body_1_material" />

                <Spinner
                    android:id="@+id/raza_nuevo_texto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:nextFocusDown="@+id/sexo_nuevo_vaca" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/abc_text_size_body_1_material" />

                <EditText
                    android:id="@+id/sexo_nuevo_vaca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="M/H"
                    android:inputType="textCapWords"
                    android:nextFocusDown="@+id/dia_vaca"
                    android:singleLine="true" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/aniadir_vaca_fecha_nacimiento"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/abc_text_size_body_1_material" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp" >

                <EditText
                    android:id="@+id/dia_vaca"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="dd"
                    android:inputType="number"
                    android:nextFocusDown="@+id/mes_vaca"
                    android:textSize="@dimen/abc_text_size_body_1_material" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/barra"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/abc_text_size_body_1_material" />

                <EditText
                    android:id="@+id/mes_vaca"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="mm"
                    android:inputType="number"
                    android:nextFocusDown="@+id/anio_vaca"
                    android:textSize="@dimen/abc_text_size_body_1_material" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/barra"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/abc_text_size_body_1_material" />

                <EditText
                    android:id="@+id/anio_vaca"
                    android:layout_width="94dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="aaaa"
                    android:inputType="number"
                    android:nextFocusDown="@+id/id_madre_nuevo_vaca"
                    android:textSize="@dimen/abc_text_size_body_1_material" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/aniadir_vaca_id_madre"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/abc_text_size_body_1_material" />

            <EditText
                android:id="@+id/id_madre_nuevo_vaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:ems="10"
                android:hint="Ej: ES111111111111"
                android:inputType="textCapCharacters"
                android:textSize="@dimen/abc_text_size_body_1_material" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp" >

                <Button
                    android:id="@+id/foto_boton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="15dp"
                    android:background="@drawable/agregar_foto"
                    android:onClick="cargarFoto" />

                <Button
                    android:id="@+id/botonNuevaVaca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="45dp"
                    android:onClick="nuevaVaca"
                    android:text="@string/botonAceptar" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>